@@ -1,3 +1,5 @@
+package PipelineChannelDemo;
+
 import DataChannel.ChronicleQueueChannel;
 import DataChannel.DataChannel;
 import DataChannel.NetworkChannel.NetworkChannelClient;
@@ -12,21 +14,51 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 
 /**
- * Demonstrates the usage of {@link PipelineChannel} for chaining multiple data channels.
+ * The {@code pipelineChannelCrashDemo} class demonstrates a pipeline architecture where the consumer
+ * (Normalizer) is temporarily paused and later resumed while the producer continues to send data.
+ * This demo illustrates how to use a chained channel (a {@link PipelineChannel}) that connects a
+ * network client channel to a persistent ChronicleQueueChannel, allowing messages to be stored on disk
+ * even when the consumer is not actively processing data.
+ *
  * <p>
- * This class includes two primary demonstration methods:
- * <ul>
- *     <li>{@link #pipelineChannelDemo()} - Demonstrates a basic producer-consumer pipeline.</li>
- *     <li>{@link #pipelineChannelCrashDemo()} - Simulates a consumer failure and restart.</li>
- * </ul>
+ * The demo workflow is as follows:
+ * </p>
+ * <ol>
+ *   <li>
+ *     <b>Producer Setup (Server):</b> A producer is started using a {@link NetworkChannelServer} on a specified port.
+ *         The producer uses a {@link Producer.QueryGenerator.CoinbaseGenerator} to subscribe to QUOTE data for "BTC-USD" and sends data
+ *         into the network channel.
+ *   </li>
+ *   <li>
+ *     <b>Consumer Phase 1 (Initial Processing):</b> The consumer connects via a {@link NetworkChannelClient} and chains it with
+ *         a {@link ChronicleQueueChannel} (with a restartable tailer) using a {@link PipelineChannel}. A {@link Normalizer} reads data
+ *         from this pipeline and writes normalized JSON Lines (JSONL) to an output file. This phase runs for a specified duration
+ *         (e.g., 10 seconds) and then stops.
+ *   </li>
+ *   <li>
+ *     <b>Pause:</b> After Consumer Phase 1 stops, the demo simulates a pause (e.g., 5 seconds) during which data continues to be
+ *         collected and stored persistently by the ChronicleQueueChannel.
+ *   </li>
+ *   <li>
+ *     <b>Consumer Phase 2 (Resumed Processing):</b> A new consumer instance is started on the same tailer, reconnecting to the
+ *         persistent channel to resume processing and writing data to the output file.
+ *   </li>
+ *   <li>
+ *     Finally, the pipeline is shut down, and the producer is interrupted gracefully.
+ *   </li>
+ * </ol>
+ *
+ * <p>
+ * The normalized data is stored in a JSONL file, which is chosen for its human-readability and ease of integration with
+ * other systems.
+ * </p>
+ *
+ * <p>
+ * <b>Important:</b> When using ChronicleQueue on Java 17 and above, ensure that the required JVM options (e.g.,
+ * {@code --add-opens} and {@code --add-exports}) are set appropriately as described in the project documentation.
  * </p>
  */
-public class PipelineChannelDemo {
-
-    public static void main(String[] args) throws Exception {
-//        pipelineChannelCrashDemo();
-        pipelineChannelDemo();
-    }
+public class pipelineChannelCrashDemo {
 
     /**
      * Demonstrates a scenario where a consumer (Normalizer) stops and later resumes processing data.
@@ -42,7 +74,7 @@ public class PipelineChannelDemo {
      *
      * @throws Exception If any error occurs during execution.
      */
-    public static void pipelineChannelCrashDemo() throws Exception {
+    public static void main(String[] args) throws Exception {
         int port = 12345;  // Choose an available port
 
         // Set up a directory for Chronicle Queue storage.
@@ -121,87 +153,4 @@ public class PipelineChannelDemo {
         System.out.println("Demo complete. Check output file at: " + outputFile.toAbsolutePath());
     }
 
-    /**
-     * Demonstrates a full pipeline where a producer sends market data via a network channel,
-     * and a consumer processes the data through a {@link PipelineChannel}.
-     * <p>
-     * The steps in this demonstration are:
-     * <ul>
-     *     <li>A producer sends data via a {@link NetworkChannelServer}.</li>
-     *     <li>The data is received by a {@link NetworkChannelClient}.</li>
-     *     <li>The data is forwarded via a {@link PipelineChannel} to a {@link ChronicleQueueChannel}.</li>
-     *     <li>The consumer (Normalizer) reads from the Chronicle queue and processes the data.</li>
-     * </ul>
-     * </p>
-     *
-     * @throws Exception If any error occurs during execution.
-     */
-    public static void pipelineChannelDemo() throws Exception {
-        int port = 12345;  // Choose an available port
-
-        // Set up a directory for Chronicle Queue storage.
-        Path queueDir = Path.of("queue-data");
-        if (!Files.exists(queueDir)) {
-            Files.createDirectories(queueDir);
-        }
-        System.out.println("Queue directory: " + queueDir.toAbsolutePath());
-
-        // Set up a fixed output file for normalized messages.
-        Path outputFile = Path.of("normalized_output_pipeline.jsonl");
-        if (!Files.exists(outputFile)) {
-            Files.createFile(outputFile);
-        }
-        System.out.println("Output file: " + outputFile.toAbsolutePath());
-
-        // --- Persistent Storage with ChronicleQueueChannel ---
-        DataChannel chronicleChannel = new ChronicleQueueChannel(queueDir.toString());
-
-        // --- Producer Side (NetworkChannelServer) ---
-        Thread producerThread = new Thread(() -> {
-            try (DataChannel networkServerChannel = new NetworkChannelServer(port)) {
-                Producer producer = new Producer(new CoinbaseGenerator(), "BTC-USD", MarketDataQueryType.QUOTE, networkServerChannel);
-                producer.run();
-            } catch (Exception e) {
-                System.err.println("Producer error: " + e.getMessage());
-                e.printStackTrace();
-            }
-        });
-        producerThread.start();
-
-        // Give the producer a moment to start.
-        Thread.sleep(1000);
-
-        // --- Network Client Side (Receiver) ---
-        DataChannel networkClientChannel = new NetworkChannelClient("localhost", port);
-
-        // --- Pipeline Channel ---
-        // The PipelineChannel forwards data from the NetworkChannelClient to the ChronicleQueueChannel.
-        DataChannel pipelineChannel = new PipelineChannel(networkClientChannel, chronicleChannel);
-
-        // --- Consumer Side (Normalizer) ---
-        Thread consumerThread = new Thread(() -> {
-            try {
-                Normalizer normalizer = new Normalizer(pipelineChannel, outputFile.toString());
-                normalizer.run(); // Blocks until the channel is closed or terminated.
-            } catch (Exception e) {
-                System.err.println("Normalizer error: " + e.getMessage());
-                e.printStackTrace();
-            }
-        });
-        consumerThread.start();
-
-        // Let the pipeline run for a specified duration (e.g., 60 seconds).
-        System.out.println("Pipeline running for 60 seconds...");
-        Thread.sleep(60000);
-
-        pipelineChannel.close();
-
-        producerThread.interrupt();
-        consumerThread.interrupt();
-
-        producerThread.join();
-        consumerThread.join();
-
-        System.out.println("Pipeline demo complete. Check the output file at: " + outputFile.toAbsolutePath());
-    }
 }
